WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186464
REGRESSION (
r230480
): Cannot adjust photo position on LinkedIn's profile page
https://bugs.webkit.org/show_bug.cgi?id=186464
Summary
REGRESSION (r230480): Cannot adjust photo position on LinkedIn's profile page
alan
Reported
2018-06-09 13:47:58 PDT
rdar://problem/40369448
Attachments
Patch
(5.59 KB, patch)
2018-06-09 14:02 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(12.77 MB, application/zip)
2018-06-09 17:24 PDT
,
EWS Watchlist
no flags
Details
Patch
(5.52 KB, patch)
2018-06-09 17:38 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-06-09 14:02:21 PDT
Created
attachment 342370
[details]
Patch
Simon Fraser (smfr)
Comment 2
2018-06-09 16:32:08 PDT
Comment on
attachment 342370
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=342370&action=review
> LayoutTests/fast/images/positioned-image-when-transform-is-present-expected.html:1 > +<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
Wut.
> LayoutTests/fast/images/positioned-image-when-transform-is-present.html:1 > +<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
Wut.
alan
Comment 3
2018-06-09 16:42:58 PDT
(In reply to Simon Fraser (smfr) from
comment #2
)
> Comment on
attachment 342370
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=342370&action=review
> > > LayoutTests/fast/images/positioned-image-when-transform-is-present-expected.html:1 > > +<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"> > > Wut. > > > LayoutTests/fast/images/positioned-image-when-transform-is-present.html:1 > > +<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"> > > Wut.
lol copypaste
EWS Watchlist
Comment 4
2018-06-09 17:24:39 PDT
Comment on
attachment 342370
[details]
Patch
Attachment 342370
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/8104426
New failing tests: http/tests/security/local-video-source-from-remote.html
EWS Watchlist
Comment 5
2018-06-09 17:24:50 PDT
Created
attachment 342373
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
alan
Comment 6
2018-06-09 17:38:40 PDT
Created
attachment 342375
[details]
Patch
WebKit Commit Bot
Comment 7
2018-06-09 18:26:59 PDT
Comment on
attachment 342375
[details]
Patch Clearing flags on attachment: 342375 Committed
r232663
: <
https://trac.webkit.org/changeset/232663
>
WebKit Commit Bot
Comment 8
2018-06-09 18:27:01 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2018-06-09 18:28:10 PDT
<
rdar://problem/40974886
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug