Source/WebCore/rendering/RenderImage.cpp
@@ -709,7 +709,7 @@ bool RenderImage::canHaveChildren() const
 void RenderImage::layout()
 {
     // Recomputing overflow is required only when child content is present. 
-    if (needsSimplifiedNormalFlowLayout() && !m_hasShadowControls) {
+    if (needsSimplifiedNormalFlowLayoutOnly() && !m_hasShadowControls) {
         clearNeedsLayout();
         return;
     }
